Added snake classes

--- a/views/results.html
+++ b/views/results.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Results:</h1>
 <h2>{{ @SESSION.pet->talk() }}</h2>
-<h2>unknowns color is {{ @SESSION.pet->getColor() }}</h2>
+<h2>{{ @SESSION.pet->getName() }} color is {{ @SESSION.pet->getColor() }}</h2>
 </body>
 </html>
