Made form sticky, can now set and get a pets name from the newly created name input

--- a/views/form1.html
+++ b/views/form1.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <form method="post" action="#">
-    <labeL>Animal:
-        <input type="text" name="animal">
-    </labeL>
+    <label>Animal:
+        <input type="text" name="animal" value="{{ @SESSION.pet->getType() }}">
+    </label>
     <input type="submit" value="Submit">
 </form>
 </body>
